Schriftart zu Latin Modern geändert.

--- a/skript.tex
+++ b/skript.tex
@@ -8,6 +8,7 @@
 \usepackage{listings}
 \usepackage{amsthm}
 \usepackage{amssymb}
+\usepackage{lmodern}
 % Needed for parskip package as it breaks vertical space above theoremstyles
 \begingroup
 \makeatletter
