--- a/a-gruppen.tex
+++ b/a-gruppen.tex
@@ -102,8 +102,8 @@ vertieft werden sollen.
 \end{definition}
 
 \begin{beispiel}
-  Wir haben gesehen, dass $\G := (\Z{}, +)$ eine Gruppe ist. Es sei
-  $\Z{g}$ die Menge der geraden Zahlen. Dann ist $\mathbbm{U} := (\Z{g},
+  Wir haben gesehen, dass $\G \coloneqq (\Z{}, +)$ eine Gruppe ist. Es sei
+  $\Z{g}$ die Menge der geraden Zahlen. Dann ist $\mathbbm{U} \coloneqq (\Z{g},
   +)$ eine Untergruppe von $\G$:
   \begin{itemize}
   \item Es ist $\mathbb{U} \subset \G$, weil die geraden Zahlen eine
@@ -231,7 +231,7 @@ also als Elemente die Äquivalenzklassen der Zahlen von $1$ bis $p-1$.
 
 \begin{beispiel}
 \label{bsp:azyklische_gruppe}
-Betrachten wir die Gruppe $\G := (\Z{8}, \cdot)$. Zunächst prüfen wir, welche
+Betrachten wir die Gruppe $\G \coloneqq (\Z{8}, \cdot)$. Zunächst prüfen wir, welche
 Elemente die Gruppe hat:
 \begin{eqnarray*}
 ggT(1, 8) = 1 \rightarrow 1 \in \G\\
@@ -261,7 +261,7 @@ Die Gruppe $\G$ hat also keinen Erzeuger, ist also nicht zyklisch.
 \end{beispiel}
 
 \begin{beispiel}
-  Analog zu Beispiel \ref{bsp:azyklische_gruppe} prüfen wir, ob $\G :=
+  Analog zu Beispiel \ref{bsp:azyklische_gruppe} prüfen wir, ob $\G \coloneqq
   (\Z{7}, \cdot)$ zyklisch ist. $\G$ hat die Elemente $\{1, 2, 3, 4, 5,
   6\}$.
 
