--- a/seitenkanalangriffe.tex
+++ b/seitenkanalangriffe.tex
@@ -109,9 +109,9 @@ simuliert er den Algorithmus für alle $X$ aus seinen
 Trace-Message-Paaren und sortiert die Eingaben in zwei Gruppen \calL,
 \calH, wobei
 \begin{eqnarray*}
-\calL & := &\{X| \texttt{Simulation mit $X$ hat einen niedrigen
+\calL & \coloneqq &\{X| \texttt{Simulation mit $X$ hat einen niedrigen
   Stromverbrauch}\},\\
-\calH & := &\{X| \texttt{Simulation mit $X$ hat einen hohen
+\calH & \coloneqq &\{X| \texttt{Simulation mit $X$ hat einen hohen
   Stromverbrauch}\}.
 \end{eqnarray*}
 Anschließend betrachtet der Angreifer den durchschnittlichen
