--- a/09-identifikation.tex
+++ b/09-identifikation.tex
@@ -27,7 +27,7 @@ sein kann, dass der Prover das Geheimnis kennt, der Verifier selbst
 jedoch $\skey$ nicht lernt.
 
 Ein zweiter Versuch umfasst die bereits entwickelten
-Signaturschemata. Der Prover schickt $\sigma := \sig(\skey_A,
+Signaturschemata. Der Prover schickt $\sigma \coloneqq \sig(\skey_A,
 \text{"`ich bin's, P"'})$ an den Verifier.  $\ver(\pkey_A,\text{"`ich
 bin's, P"'}, \sigma)$ liefert dem Verifier die Gültigkeit der
 entsprechenden Signatur und damit die Identität des Absenders. Die Idee
@@ -56,7 +56,7 @@ in Kapitel \ref{sec:id:protokolle} näher betrachtet.
 
       \put(50,10){\vector(-1,0){40}} \put(30,11){\makebox(0,0)[cb]{$R$}}
       
-      \put(10,3){\vector(1,0){40}} \put(30,4){\makebox(0,0)[cb]{$\sigma :=
+      \put(10,3){\vector(1,0){40}} \put(30,4){\makebox(0,0)[cb]{$\sigma \coloneqq
           \sig(\skey_A, R)$}}
     \end{picture}
   \end{center}
@@ -191,7 +191,7 @@ PK-Identifikationsprotokoll $(\gen, \mathrm{P}, \mathrm{V})$
 PK-Identifikationsprotokoll bricht. Dann ist er in der Lage,
 nicht-vernachlässigbar oft aus dem öffentlichen Schlüssel $\pkey_{i^*}$
 und einer vom Verifier ausgewählten Zufallszahl $R$ eine Signatur
-$\sigma := \sig(\skey_{i^*}, R)$ zu berechnen.
+$\sigma \coloneqq \sig(\skey_{i^*}, R)$ zu berechnen.
 
 Aus $A$ kann nun ein Angreifer $B$ konstruiert werden, der die
 Ergebnisse von $A$ nutzt, um das EUF-CMA-sichere Signaturverfahren zu
