--- a/06-symauth.tex
+++ b/06-symauth.tex
@@ -81,8 +81,8 @@ sieht das Experiment für einen PPT-Angreifer \A~so aus:
   Schlüssel \key~zufällig gleichverteilt wählt.
   \begin{enumerate}
   \item \A~erhält Zugriff auf ein Signaturorakel $\sig(\key,\cdot)$, an
-    dass er polyomiell viele Nachrichten $\plaint_i$ schicken darf (in
-    beliebiger Reihenfolge und unabhängig von einander) und jeweils
+    das er polyomiell viele Nachrichten $\plaint_i$ schicken darf (in
+    beliebiger Reihenfolge und unabhängig voneinander) und jeweils
     $\sigma_i \leftarrow \sig(\key, \plaint_i)$ als Antwort erhält.
   \item \A~gibt als (potentielle) Fälschung ein Nachrichten-Signatur-Paar
     $(\plaint^*,\sigma^*)$ aus.
