--- a/03-definition.tex
+++ b/03-definition.tex
@@ -143,7 +143,7 @@ eingeführt, wie beispielsweise \emph{IND-CPA}.
 \section{Der IND-CPA-Sicherheitsbegriff}\label{sec:ind-cpa} IND-CPA
 steht für \emph{indistinguishability under chosen-plaintext attacks}
 \indexINDCPA. Bei einem Verfahren, welches diese Sicherheit besitzt,
-kann ein polyomiell beschränkter Angreifer $\A$ die Chiffrate von
+kann ein polynomiell beschränkter Angreifer $\A$ die Chiffrate von
 selbstgewählten Klartexten nicht unterscheiden.
 \begin{definition}[IND-CPA-Sicherheit] Betrachte folgendes Experiment
   mit einem Herausforderer $\C$ und einem PPT-Algorithmus $\A$, bei dem
