Fehler bzgl. MITM-Angriff auf Diffie-Hellman korrigiert.

--- a/08-keyexchange.tex
+++ b/08-keyexchange.tex
@@ -259,7 +259,7 @@ Angenommen, Alice und Bob würden den Schlüssel nun für ein
 Verschlüsselungsverfahren verwenden wollen. Verschlüsselt Alice nun eine
 Nachricht, so tut sie dies mit dem Schlüssel $g^{xa}$. Sendet sie also ein
 Chiffrat an Bob, so muss \A~dieses abfangen, entschlüsselt (\A~kennt
-$g^{xa}$), mit $g^{xb}$ verschlüsseln und dann dieses Chiffrat an Bob
+$g^{xa}$), mit $g^{ya}$ verschlüsseln und dann dieses Chiffrat an Bob
 senden. Analog geht \A~vor, wenn Bob eine Nachricht an Alice
 schickt. Damit lernt \A~alle Nachrichten, die Alice und Bob
 austauschen. Zusätzlich muss \A~dies tun, um nicht aufzufallen. Würde
