Projekt AUCTeX-tauglich gemacht.

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -168,3 +168,7 @@ Diese Gründe mögen einleuchtend sein. Trotzdem wurde Kerckhoffs' Prinzip
 immer wieder zugunsten geheimer Verfahren ignoriert, was zu fatalen
 Ergebnissen führte. Es sollten nur standardisierte und öffentlich
 getestete Verfahren verwendet werden.
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
