--- a/02-symencryption.tex
+++ b/02-symencryption.tex
@@ -2173,3 +2173,8 @@ Teil einer Vielzahl an existierenden Betriebsmodi sind.\indexECB\indexCBC\indexC
     $^{\ast\ast}$ Hierfür muss der $IV$ vor jeder Verschlüsselung
     zufällig gleichverteilt gewählt werden} 
 \end{table}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
