--- a/03-definition.tex
+++ b/03-definition.tex
@@ -339,3 +339,7 @@ IND-CCA-Experimentes noch einmal grafisch dar.
   \caption{Ablauf des IND-CCA-Experiments.}
   \label{fig:ind-cca}
 \end{figure}
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
