--- a/04-hashing.tex
+++ b/04-hashing.tex
@@ -600,3 +600,8 @@ Die vorgestellten Angriffe zeigen, dass sich der Aufwand zum Finden
 einer Kollision gegenüber einer Brute-Force-Attacke stark verringern
 lässt. Bei einer Hash-Ausgabe mit einer Länge $\geq k$ Bits kann man nur
 mit einer "`Sicherheit"' von $\frac{k}{2}$ Bits rechnen.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
