--- a/05-asymmenc.tex
+++ b/05-asymmenc.tex
@@ -619,3 +619,7 @@ verwendet man in der Praxis oft sogenannte \emph{hybride}
 Verschlüsselungsverfahren\indexEncryptionHybrid. Ein Beispiel hierfür
 ist \emph{TLS}\indexTLS, das in \hyperref[cha:keyexchange]{Kapitel 8}
 näher besprochen wird.
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
