--- a/06-symauth.tex
+++ b/06-symauth.tex
@@ -344,3 +344,8 @@ Hash\-vorgängen verarbeitet. Für eine Nachricht $M,X$ ist
 Angreifer müsste einen Nachrichtenblock $X$ bereits im inneren
 Hashvorgang unterbringen. Da er dafür allerdings $H$ invertieren, oder
 das Geheimnis $K$ kennen müsste, schlägt der Angriff fehl.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
