--- a/08-keyexchange.tex
+++ b/08-keyexchange.tex
@@ -662,3 +662,8 @@ authentifizieren, ohne das dafür nötige Geheimnis aufzudecken.
 PAKE wird z.B. als Basis für EAP (\emph{Extensible Authentication
 Protocol}) in WPA verwendet und ist formal modellierbar und seine
 Sicherheit unter bestimmten theoretischen Annahmen beweisbar.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
