--- a/09-identifikation.tex
+++ b/09-identifikation.tex
@@ -256,3 +256,8 @@ diese Aufgabe die Entschlüsselung eines zufälligen Chiffrats $C =
 \enc(\pkey_{i^*}, R)$. Die Lösung des Provers wird daher auch als die
 Antwort, oder "`Response"' bezeichnet.
 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
