--- a/10-zeroknowledge.tex
+++ b/10-zeroknowledge.tex
@@ -493,3 +493,8 @@ ist, dass die dem Verifier aufgedeckten Farben stets einer anderen
 Permutation unterzogen werden (vgl. Beispiel \ref{ex:zk:zkexample}),
 während die Kanten, die der Extraktor in Erfahrung bringt immer der
 selben Permutation unterliegen. 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
