--- a/11-authentifikation.tex
+++ b/11-authentifikation.tex
@@ -779,3 +779,8 @@ durchführen. Ist der Passwortraum aber größer als $10^9$,
 z.B. $10^{15}$, so müsste der Angreifer insgesamt $10^{18}$ mal die
 Funktion $H$ auswerten. Dies stellt den Angreifer vor eine deutlich
 größere Herausforderung als den Betreiber des Servers $S$.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
