--- a/12-zugriffskontrolle.tex
+++ b/12-zugriffskontrolle.tex
@@ -297,3 +297,8 @@ die gerade mit zunehmender Dauer den Beratern enge Grenzen steckt. Eine
 Möglichkeit, die gelesenen Objekte eines Beraters (nach einer gewissen
 Zeit) zurückzusetzen, gibt es nicht. Um höchstmögliche Sicherheit zu
 bieten, ist das Fehlen eines solchen Mechanismus allerdings sinnvoll.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
