--- a/13-protokolle.tex
+++ b/13-protokolle.tex
@@ -196,3 +196,8 @@ Mit diesem Werkzeug lässt sich nämlich das Protokoll $\pi^\tau$ mit einem \emp
 Auf der anderen Seite ist $\geq$ jedoch technisch sehr schwer zu handhaben. Deshalb werden größere Protokolle hauptsächlich mit dem Security-Ansatz untersucht.
 
 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
