--- a/14-implementierung.tex
+++ b/14-implementierung.tex
@@ -329,3 +329,8 @@ Tritt keine Hashkollision auf, so benötigt man für $n$ Zugriffe auf eine solch
 Dies kann sich ein Angreifer zunutze machen. Da $h$ keine kryptographische Kollisionsresistenz bietet, kann der Angreifer eine große Anzahl entsprechender Schlüssel erzeugen, so dass diese in der Dictionary-Struktur des Servers alle in der selben Liste gespeichert werden. Dadurch kann der Angreifer gezielt eine hohe Last auf dem Server erzeugen.
 
 Weitere Informationen zu diesem Angriff finden sich im Vortrag \cite{Klink2011}.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
