--- a/seitenkanalangriffe.tex
+++ b/seitenkanalangriffe.tex
@@ -283,3 +283,7 @@ Sie zu analysieren erfordert Kenntnisse in den theoretischen Aspekten
 von Kryptographie, in der Implementierung von kryptographischen
 Komponenten sowie in den Eigenschaften der Hardware, auf denen die
 Komponenten eingesetzt werden.
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
