--- a/07-asymmauth.tex
+++ b/07-asymmauth.tex
@@ -466,3 +466,7 @@ Der \texttt{Data}-Abschnitt enthält verschiedene Daten:
 \item \texttt{X509v3 extensions}: Hier kann X509 mit Erweiterungen
   versehen werden, um an besondere Anforderungen angepasst zu werden.
 \end{itemize}
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
