Kommas, Doppelpunkte, stilistische Änderungen.

--- a/03-definition.tex
+++ b/03-definition.tex
@@ -168,7 +168,7 @@ selbstgewählten Klartexten nicht unterscheiden.
 \end{definition} Abbildung \ref{fig:ind-cpa} stellt den Ablauf dieses
 Sicherheitsexperimentes noch einmal grafisch dar.
 
-Der Orakelbegriff\indexOracle ermöglicht es uns einem Angreifer neben
+Der Orakelbegriff\indexOracle ermöglicht es uns, einem Angreifer neben
 $C^{\ast}$ zusätzliche Informationen zu geben und dementsprechend einen
 stärkeren Sicherheitsbegriff zu erhalten. So sind beispielsweise
 deterministische Verfahren grundsätzlich nicht IND-CPA-sicher.
