--- a/04-hashing.tex
+++ b/04-hashing.tex
@@ -1,7 +1,7 @@
 \chapter{Hashfunktionen}\label{cha:hash}
 \section{Grundlagen}
 Hashfunktionen\indexHashFunction sind Funktionen, die von einer großen,
-potentiell unbeschränkten Menge in eine kleinere Menge abbilden, also 
+potentiell unbeschränkten, Menge in eine kleinere Menge abbilden. Also 
 \begin{align*}
 H_k\colon \{0,1\}^* \rightarrow \{0,1\}^k\, ,
 \end{align*}
