--- a/07-asymmauth.tex
+++ b/07-asymmauth.tex
@@ -241,21 +241,21 @@ berechnet.
 Für die Schlüssel gilt weiterhin $\skey = (\G, g, x)$, $\pkey = (\G, g,
 g^x)$.  Für die Signaturerzeugung wird eine zufällige, in $\Z{p}$
 invertierbare Zahl $e \in \{1, \dots, p - 1\}$ gewählt, wobei
-$p-1=|\G|$. Damit berechnet man
+$p-1=|\G|$. Damit berechnet man:
 \begin{align*} 
   a &\coloneqq g^e \in \G\\ 
   b &\coloneqq (M - a \cdot x) \cdot e^{-1} \mod |G|
 \end{align*} 
-$a$ wird je nach Kontext als Gruppenelement oder als Zahl interpretiert,
+$a$ wird je nach Kontext als Gruppenelement oder als Zahl interpretiert.
 $b$ ist eine Zahl in $\Z{p}$.  Damit gilt $a \cdot x + e \cdot b =
 M$. Das Signaturverfahren ist nun $\sig(\skey,M) = (a, b)$.
 
 Für das Verifikationsverfahren werden nun zwei Gruppenelemente $v_1, v_2
-\in \G$ berechnet mit
+\in \G$ berechnet, mit:
 \begin{align*} 
-  v_1 &= (g^x)^a \cdot a^b\\ v_2 &= g^M.
+  v_1 &= (g^x)^a \cdot a^b\\ v_2 &= g^M
 \end{align*}
-Das Verifikationsverfahren ist nun
+Das Verifikationsverfahren ist nun:
 \begin{align*} 
   \ver(\pkey,\sigma,M) = 1 : & \Leftrightarrow v_1 = v_2 \\
                              &\Leftrightarrow (g^x)^a \cdot a^b = g^M \\ 
