Projekt weiter Emacs-tauglich gemacht.

--- a/a-gruppen.tex
+++ b/a-gruppen.tex
@@ -283,3 +283,7 @@ Die Gruppe $\G$ hat also keinen Erzeuger, ist also nicht zyklisch.
   weiterer Erzeuger ist $5$, während $4$ und $6$ keine Erzeuger sind.
 
 \end{beispiel}
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "skript"
+%%% End:
