Definitionen etwas aufgeräumt.

--- a/a-gruppen.tex
+++ b/a-gruppen.tex
@@ -138,7 +138,7 @@ Gruppenelementen. Viele kryptographische Anwendungen in Gruppen machen
 direkt oder indirekt Gebrauch von der Ordnung, beispielsweise bei
 Korrektheits- oder Sicherheitsbeweisen. 
 \begin{definition}[Ordnung einer Gruppe]\index{Gruppe!Ordung}
-  Sein $(\G, \cdot)$ eine Gruppe. Dann heißt die Anzahl $|\G|$ der Elemente in
+  Sei $(\G, \cdot)$ eine Gruppe. Dann heißt die Anzahl $|\G|$ der Elemente in
   \G~die Ordnung der Gruppe.
 \end{definition}
 
@@ -146,7 +146,7 @@ Korrektheits- oder Sicherheitsbeweisen.
   Die Ordung $\operatorname{ord}(g) $ eines Gruppenelements $g$
   bezeichnet die kleinste 
   natürliche Zahl $n>0$, für die $g^n = e$ gilt. Existiert kein solches
-  Element, so sagt man, $g$ habe unendliche Ordnung.
+  Element, so hat $g$ unendliche Ordnung.
  \end{definition}
 
 Für den Korrektheitsbeweiß des RSA-Verschlüsselungsverfahrens wurde der
