'PKE' und 'SKE' definiert.

--- a/abkuerzungen.tex
+++ b/abkuerzungen.tex
@@ -19,7 +19,8 @@
   IND-CCA     & indistinguishability under chosen-ciphertext attacks       & Sicherheitsbegriff für Verschlüsselungsverfahren, siehe Kap. \ref{sec:ind-cca}. \\ \hline
   IND-CPA     & indistinguishability under chosen-plaintext attacks        & Sicherheitsbegriff für Verschlüsselungsverfahren, siehe Kap. \ref{sec:ind-cpa}. \\ \hline
   MAC         & Message Authentication Code                                & symmetrisches Verfahren, um die Authentizität einer Nachricht                                   
-                                           sicherzustellen. Siehe Kap. \ref{ch:symauth:macs}.               \\ \hline
+                                                                             sicherzustellen. Siehe Kap. \ref{ch:symauth:macs}.               \\ \hline
+  PKE & Public Key Encryption & \\ \hline
   PPT         & probabilistic polynomial time                              & Laufzeit von Algorithmen. Ein Algorithmus ist PPT, wenn er mit polynomiellem Aufwand und        
                                                                       einer  Fehlerwahrscheinlichkeit kleiner als $0,5$. Siehe Kap. \ref{sec:secparam}. \\ \hline 
   PRF         & Pseudorandomisierte Funktion                               & Funktion, für die es schwer ist, sie von echtem Zufall zu                                       
@@ -28,6 +29,7 @@
   RSA         & Rivest, Shamir, Adleman                                    & Public-Key Verfahren für Verschlüsselung und Signaturen          \\ \hline
   RSA-OAEP    & RSE optimal asymmetric encryption padding                  & Gepappete, sicherere Variante von RSA. Siehe Kap. \ref{ssec:sicheres-rsa}  \\ \hline
   SHA         & Secure Hash Algorithm                                      & Standards für Familien von Hash-Verfahren                        \\ \hline
+  SKE & Secret Key Encryption & \\ \hline
   TLS         & Tranport Layer Security                                    & Protokoll für verschlüsselte Verbindungen auf Transportebene.                                   
                                                                              Siehe Kap. \ref{sec:keyexchange:tls}.                            \\ \hline
 \end{tabular}
