--- a/07-asymmauth.tex
+++ b/07-asymmauth.tex
@@ -238,13 +238,13 @@ Allerdings lässt sich diese Konstruktion auf einfache Art
 brechen, indem mit $x = M a^{-1} \mod \G$ der geheime Schlüssel
 berechnet.
 \subsection{Schlüssel- und Signaturerzeugung} 
-Für die Schlüssel gilt weiterhin $\skey = (\G, g, x)$, $\pkey = (\G, g,
+Für die Schlüssel gilt weiterhin $\skey \coloneqq (\G, g, x)$, $\pkey \coloneqq (\G, g,
 g^x)$.  Für die Signaturerzeugung wird eine zufällige, in $\Z{p}$
 invertierbare Zahl $e \in \{1, \dots, p - 1\}$ gewählt, wobei
 $p-1=|\G|$. Damit berechnet man:
 \begin{align*} 
   a &\coloneqq g^e \in \G\\ 
-  b &\coloneqq (M - a \cdot x) \cdot e^{-1} \mod |G|
+  b &\coloneqq (M - a \cdot x) \cdot e^{-1} \mod |\G|
 \end{align*} 
 $a$ wird je nach Kontext als Gruppenelement oder als Zahl interpretiert.
 $b$ ist eine Zahl in $\Z{p}$.  Damit gilt $a \cdot x + e \cdot b =
@@ -253,7 +253,7 @@ M$. Das Signaturverfahren ist nun $\sig(\skey,M) = (a, b)$.
 Für das Verifikationsverfahren werden nun zwei Gruppenelemente $v_1, v_2
 \in \G$ berechnet, mit:
 \begin{align*} 
-  v_1 &= (g^x)^a \cdot a^b\\ v_2 &= g^M
+  v_1 &\coloneqq (g^x)^a \cdot a^b\\ v_2 &\coloneqq g^M
 \end{align*}
 Das Verifikationsverfahren ist nun:
 \begin{align*} 
