Gleichheitszeichen durch Definitionszechen ersetzt.

--- a/07-asymmauth.tex
+++ b/07-asymmauth.tex
@@ -227,7 +227,7 @@ Analog zum ElGamal-Verschlüsselungssystem aus Kapitel
 der Gruppe $\G = \Z{p}^*$.
 \subsection{Erste Idee} 
 Sei für unseren ersten Versuch der geheime
-Schlüssel $\skey = (\G, g, x)$ und der öffentliche Schlüssel $\pkey =
+Schlüssel $\skey \coloneqq (\G, g, x)$ und der öffentliche Schlüssel $\pkey \coloneqq
 (\G, g, g^x)$. Dann bietet sich die Verwendung von ElGamal zur Erzeugung
 einer Signatur auf diese Art an:
 \begin{align*} 
@@ -238,7 +238,7 @@ Allerdings lässt sich diese Konstruktion auf einfache Art
 brechen, indem mit $x = M a^{-1} \mod \G$ der geheime Schlüssel
 berechnet.
 \subsection{Schlüssel- und Signaturerzeugung} 
-Für die Schlüssel gilt weiterhin $\skey = (\G, g, x)$, $\pkey = (\G, g,
+Für die Schlüssel gilt weiterhin $\skey \coloneqq (\G, g, x)$, $\pkey \coloneqq (\G, g,
 g^x)$.  Für die Signaturerzeugung wird eine zufällige, in $\Z{p}$
 invertierbare Zahl $e \in \{1, \dots, p - 1\}$ gewählt, wobei
 $p-1=|\G|$. Damit berechnet man:
@@ -253,7 +253,7 @@ M$. Das Signaturverfahren ist nun $\sig(\skey,M) = (a, b)$.
 Für das Verifikationsverfahren werden nun zwei Gruppenelemente $v_1, v_2
 \in \G$ berechnet, mit:
 \begin{align*} 
-  v_1 &= (g^x)^a \cdot a^b\\ v_2 &= g^M
+  v_1 &\coloneqq (g^x)^a \cdot a^b\\ v_2 &\coloneqq g^M
 \end{align*}
 Das Verifikationsverfahren ist nun:
 \begin{align*} 
