--- a/02-symencryption.tex
+++ b/02-symencryption.tex
@@ -2094,7 +2094,7 @@ erhalten wir folgende Operationen, wobei $\ciphert \coloneqq \enc(\key,
     \bot & \textnormal{sonst}
   \end{cases}
 \end{align*}
-Über welchen Bitstrom ein authentifizierter Modus die Signatur berechnet
+Über welchen Bitstrom ein authentifizierter Modus die Signatur berechnet,
 ist jedoch implementierungsabhängig. 
 
 Bei Bitfehlern unterscheiden wir zwischen Fehlern im Chiffrat- und im
