--- a/05-asymmenc.tex
+++ b/05-asymmenc.tex
@@ -503,7 +503,7 @@ ElGamal homomorph:
 \end{align*}
 
 \subsubsection{Sicherheit des Verfahrens und Wahl geeigneter Gruppen}\label{ElGamal sichere Gruppen}
-Für die Sicherheit des ElGamal-Verfahrens ist die Wahl eine geeigneten
+Für die Sicherheit des ElGamal-Verfahrens ist die Wahl einer geeigneten
 Gruppe $\mathbb{G}$ von entscheidender Bedeutung. ElGamal ist genau dann
 IND-CPA-sicher, wenn in $\mathbb{G}$ die \emph{decisional
   Diffie-Hellman}-Annahme\indexDecisionalDiffieHellman (DDH-Annahme)
