--- a/04-hashing.tex
+++ b/04-hashing.tex
@@ -490,8 +490,8 @@ verwendet:
   vergangener message schedules des gleichen Blocks.
 \end{itemize}
 
-Für die Eingangs erwähnten Angriffe auf die beschriebene Konstruktion
-wird die Möglichkeit ausgenutzt, für eine Runde Kollisionen zu finden
+Für die eingangs erwähnten Angriffe auf die beschriebene Konstruktion
+wird die Möglichkeit ausgenutzt, für eine Runde Kollisionen zu finden,
 und versucht, diese auf mehrere Runden auszuweiten. Dabei sind auch
 ähnliche Ausgaben hilfreich. Der schnellste der im Jahr 2005
 vorgestellten Algorithmen benötigt mit ungefähr $2^{63}$-Schritten
@@ -515,7 +515,7 @@ Aufgrund der Verwundbarkeit von MD5 und SHA-1 empfiehlt die NIST
 heutzutage mindestens eine Hashfunktion der SHA-2-Familie\indexSHATwo
 zu verwenden. Ähnlich zu SHA-1 basieren die Funktionen dieser
 Hash-Familie auf der Merkle-Damgård-Konstruktion, bieten jedoch in der
-Praxis, aufgrund des größeren Bildraums, ein höheres Maß an
+Praxis (aufgrund des größeren Bildraums) ein höheres Maß an
 Sicherheit. Theoretisch aber bleiben die Funktionen, wegen großen
 Ähnlichkeiten in der Konstruktion, verwundbar. Deshalb wurde im Jahr
 2013 mit SHA-3\indexSHAThree (\glqq Keccak\grqq{}-Algorithmus) der
