--- a/09-identifikation.tex
+++ b/09-identifikation.tex
@@ -163,12 +163,12 @@ $(\pkey, \skey)$-Paare mithilfe des $\gen$-Algorithmus und ordnet die privaten S
     beantworten.
   \item $\A$ wählt sich nun einen der $\pkey_{i}$ aus und gibt sich
     damit gegenüber dem Challenger (welcher nun als \glqq echter\grqq{}
-    Verifier fungiert) als Prover $i$ aus. der Challenger erhält als
+    Verifier fungiert) als Prover $i$ aus. Der Challenger erhält als
     Eingabe $\pkey_i$ von \A.
   \item $\A$ gewinnt, wenn der Challenger als Ergebnis schließlich 1
 ausgibt.
 \end{enumerate} Wir nennen ein Public-Key-Identifikationsprotokoll
-$(\gen, \mathrm{P}, \mathrm{V})$ sicher, wenn kein PPT-Angreifer $\A$
+$(\gen, \mathrm{P}, \mathrm{V})$ sicher, gdw. kein PPT-Angreifer $\A$
 das oben genannte Spiel häufiger als vernachlässigbar oft gewinnt.
 
 Allerdings verhindert das oben genannte Spiel keinen
